# bookmybird

./: .gitignore  Containerfile  README.md  compose.override.TEMPLATE.yaml  compose.yaml
app/: booker.py  entrypoint.py  pyproject.toml
